<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainlayout"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@drawable/background"
    tools:context=".ClockActivity">

    <TextView android:id="@+id/tv_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="19sp"
        android:gravity="center_horizontal"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginEnd="10sp"
        android:text="이 천 십 오 년    시 월    구 일    금 요 일"/>

    <TextView android:id="@+id/tv_big_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="100sp"
        android:layout_below="@+id/tv_top"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10sp"
        android:text="@string/big_hour" />

    <TextView android:id="@+id/tv_big_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="100sp"
        android:layout_alignBottom="@+id/tv_big_hour"
        android:layout_toLeftOf="@+id/tv_big_hour"
        android:layout_toStartOf="@+id/tv_big_hour"
        android:text="@string/twelfth" />

    <TextView android:id="@+id/tv_ampm_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="35sp"
        android:layout_alignBottom="@+id/tv_big_hour"
        android:layout_toLeftOf="@+id/tv_big_time"
        android:layout_toStartOf="@+id/tv_big_time"
        android:text="@string/big_ampm_unit" />

    <TextView android:id="@+id/tv_ampm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="35sp"
        android:layout_alignBottom="@+id/tv_big_hour"
        android:layout_toLeftOf="@+id/tv_ampm_unit"
        android:layout_toStartOf="@+id/tv_ampm_unit"
        android:text="@string/big_am" />

    <TextView android:id="@+id/tv_big_min_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="70sp"
        android:layout_below="@+id/tv_big_hour"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginEnd="10sp"
        android:text="@string/big_minute" />

    <TextView android:id="@+id/tv_big_min_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="70sp"
        android:layout_alignBottom="@+id/tv_big_min_unit"
        android:layout_toLeftOf="@+id/tv_big_min_unit"
        android:layout_toStartOf="@+id/tv_big_min_unit"
        android:text="@string/zero" />

    <TextView android:id="@+id/tv_big_min_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="70sp"
        android:layout_alignBottom="@+id/tv_big_min_unit"
        android:layout_toLeftOf="@+id/tv_big_min_1"
        android:layout_toStartOf="@+id/tv_big_min_1"
        android:text="@string/zero"
        android:visibility="gone" />

    <TextView android:id="@+id/tv_big_min_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="70sp"
        android:layout_alignBottom="@+id/tv_big_min_unit"
        android:layout_toLeftOf="@+id/tv_big_min_2"
        android:layout_toStartOf="@+id/tv_big_min_2"
        android:text="@string/zero"
        android:visibility="gone" />

    <TextView android:id="@+id/tv_big_sec_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="30sp"
        android:layout_below="@+id/tv_big_min_1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginEnd="10sp"
        android:text="@string/big_second" />

    <TextView android:id="@+id/tv_big_sec_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="30sp"
        android:layout_alignBottom="@+id/tv_big_sec_unit"
        android:layout_toLeftOf="@+id/tv_big_sec_unit"
        android:layout_toStartOf="@+id/tv_big_sec_unit"
        android:text="@string/zero" />

    <TextView android:id="@+id/tv_big_sec_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="30sp"
        android:layout_alignBottom="@+id/tv_big_sec_unit"
        android:layout_toLeftOf="@+id/tv_big_sec_1"
        android:layout_toStartOf="@+id/tv_big_sec_1"
        android:text="@string/zero"
        android:visibility="gone" />

    <TextView android:id="@+id/tv_big_sec_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="30sp"
        android:layout_alignBottom="@+id/tv_big_sec_unit"
        android:layout_toLeftOf="@+id/tv_big_sec_2"
        android:layout_toStartOf="@+id/tv_big_sec_2"
        android:text="@string/zero"
        android:visibility="gone" />

</RelativeLayout>
