<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/background"
    tools:context=".ClockActivity"
    android:keepScreenOn="true">

    <TextView android:id="@+id/tv_top_h"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="20sp"
        android:gravity="start"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="20sp"
        android:layout_marginStart="20sp"
        android:maxLines="1"
        android:text="이천십오년 시월 십일 토요일"/>

    <RelativeLayout
        android:id="@+id/rl_top_ampm_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_top_h">

        <TextView android:id="@+id/tv_ampm_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:textColor="#fff"
            android:layout_marginTop="70sp"
            android:layout_marginLeft="80sp"
            android:layout_marginStart="80sp"
            android:textSize="32.5sp"
            android:gravity="start"
            android:text="@string/big_ampm_unit" />

        <TextView android:id="@+id/tv_ampm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:textColor="#fff"
            android:textSize="32.5sp"
            android:layout_alignBottom="@+id/tv_big_hour"
            android:layout_toRightOf="@+id/tv_ampm_unit"
            android:layout_toEndOf="@+id/tv_ampm_unit"
            android:text="전"/>

        <TextView android:id="@+id/tv_big_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:textColor="#fff"
            android:textSize="90sp"
            android:layout_alignBottom="@+id/tv_ampm_unit"
            android:layout_toRightOf="@+id/tv_ampm"
            android:layout_toEndOf="@+id/tv_ampm"
            android:text="아홉"/>

        <TextView android:id="@+id/tv_big_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:textColor="#fff"
            android:textSize="90sp"
            android:layout_alignBottom="@+id/tv_ampm_unit"
            android:layout_toRightOf="@+id/tv_big_time"
            android:layout_toEndOf="@+id/tv_big_time"
            android:text="@string/big_hour" />

    </RelativeLayout>

    <TextView android:id="@+id/tv_big_min_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="63sp"
        android:layout_below="@+id/rl_top_ampm_hour"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10sp"
        android:layout_marginRight="190sp"
        android:layout_marginEnd="190sp"
        android:text="@string/big_minute" />

    <TextView android:id="@+id/tv_big_min_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="63sp"
        android:layout_alignBottom="@+id/tv_big_min_unit"
        android:layout_toLeftOf="@+id/tv_big_min_unit"
        android:layout_toStartOf="@+id/tv_big_min_unit"
        android:text="삼십이"/>

    <TextView android:id="@+id/tv_big_min_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="63sp"
        android:layout_alignBottom="@+id/tv_big_min_unit"
        android:layout_toLeftOf="@+id/tv_big_min_1"
        android:layout_toStartOf="@+id/tv_big_min_1"
        android:text="@string/zero"
        android:visibility="gone" />

    <TextView android:id="@+id/tv_big_min_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="63sp"
        android:layout_alignBottom="@+id/tv_big_min_unit"
        android:layout_toLeftOf="@+id/tv_big_min_2"
        android:layout_toStartOf="@+id/tv_big_min_2"
        android:text="@string/zero"
        android:visibility="gone" />

    <TextView android:id="@+id/tv_big_sec_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="27sp"
        android:layout_alignBottom="@+id/tv_big_min_unit"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="80sp"
        android:layout_marginEnd="80sp"
        android:text="@string/big_second" />

    <TextView android:id="@+id/tv_big_sec_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="27sp"
        android:layout_alignBottom="@+id/tv_big_min_unit"
        android:layout_toLeftOf="@+id/tv_big_sec_unit"
        android:layout_toStartOf="@+id/tv_big_sec_unit"
        android:text="오십팔"/>

    <TextView android:id="@+id/tv_big_sec_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="27sp"
        android:layout_alignBottom="@+id/tv_big_sec_unit"
        android:layout_toLeftOf="@+id/tv_big_sec_1"
        android:layout_toStartOf="@+id/tv_big_sec_1"
        android:text="@string/zero"
        android:visibility="gone" />

    <TextView android:id="@+id/tv_big_sec_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="28sp"
        android:layout_alignBottom="@+id/tv_big_sec_unit"
        android:layout_toLeftOf="@+id/tv_big_sec_2"
        android:layout_toStartOf="@+id/tv_big_sec_2"
        android:text="@string/zero"
        android:visibility="gone" />

    <TextView android:id="@+id/tv_small_yr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#9fff"
        android:textSize="13sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30sp"
        android:layout_marginRight="10sp"
        android:layout_marginEnd="10sp" />

    <TextView android:id="@+id/tv_small_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#9fff"
        android:textSize="13sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/tv_small_yr"
        android:layout_marginBottom="2sp"
        android:layout_marginRight="10sp"
        android:layout_marginEnd="10sp" />

    <TextView android:id="@+id/tv_small_day_of_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#9fff"
        android:textSize="13sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/tv_small_date"
        android:layout_marginBottom="22sp"
        android:layout_marginRight="10sp"
        android:layout_marginEnd="10sp" />

    <TextView android:id="@+id/tv_small_ampm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#9fff"
        android:textSize="13sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/tv_small_day_of_week"
        android:layout_marginBottom="2sp"
        android:layout_marginRight="10sp"
        android:layout_marginEnd="10sp" />

</RelativeLayout>