<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentlayout_h"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".ClockActivity"
    android:keepScreenOn="true"
    android:background="@drawable/launch_image_landscape">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView android:id="@+id/tv_top_h"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="20dp"
        android:gravity="start"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:maxLines="1" />

    <RelativeLayout
        android:id="@+id/rl_top_ampm_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_top_h">

        <TextView android:id="@+id/tv_ampm_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:textColor="#fff"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:textSize="32.5dp"
            android:gravity="start"
            android:text="@string/big_ampm_unit" />

        <TextView android:id="@+id/tv_ampm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:textColor="#fff"
            android:textSize="32.5dp"
            android:layout_alignBottom="@+id/tv_big_hour"
            android:layout_toRightOf="@+id/tv_ampm_unit"
            android:layout_toEndOf="@+id/tv_ampm_unit"
            android:text="전"/>

        <TextView android:id="@+id/tv_big_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:textColor="#fff"
            android:textSize="90dp"
            android:layout_alignBottom="@+id/tv_ampm_unit"
            android:layout_toRightOf="@+id/tv_ampm"
            android:layout_toEndOf="@+id/tv_ampm" />

        <TextView android:id="@+id/tv_big_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:textColor="#fff"
            android:textSize="90dp"
            android:layout_alignBottom="@+id/tv_ampm_unit"
            android:layout_toRightOf="@+id/tv_big_time"
            android:layout_toEndOf="@+id/tv_big_time"
            android:text="@string/big_hour" />

    </RelativeLayout>

    <TextView android:id="@+id/tv_big_min_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="63dp"
        android:layout_below="@+id/rl_top_ampm_hour"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="190dp"
        android:layout_marginEnd="190dp"
        android:text="@string/big_minute" />

    <TextView android:id="@+id/tv_big_min_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="63dp"
        android:layout_alignBottom="@+id/tv_big_min_unit"
        android:layout_toLeftOf="@+id/tv_big_min_unit"
        android:layout_toStartOf="@+id/tv_big_min_unit" />

    <TextView android:id="@+id/tv_big_min_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="63dp"
        android:layout_alignBottom="@+id/tv_big_min_unit"
        android:layout_toLeftOf="@+id/tv_big_min_1"
        android:layout_toStartOf="@+id/tv_big_min_1"
        android:text="@string/zero"
        android:visibility="gone" />

    <TextView android:id="@+id/tv_big_min_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="63dp"
        android:layout_alignBottom="@+id/tv_big_min_unit"
        android:layout_toLeftOf="@+id/tv_big_min_2"
        android:layout_toStartOf="@+id/tv_big_min_2"
        android:text="@string/zero"
        android:visibility="gone" />

    <TextView android:id="@+id/tv_big_sec_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="27dp"
        android:layout_alignBottom="@+id/tv_big_min_unit"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="80dp"
        android:layout_marginEnd="80dp"
        android:text="@string/big_second" />

    <TextView android:id="@+id/tv_big_sec_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="27dp"
        android:layout_alignBottom="@+id/tv_big_min_unit"
        android:layout_toLeftOf="@+id/tv_big_sec_unit"
        android:layout_toStartOf="@+id/tv_big_sec_unit" />

    <TextView android:id="@+id/tv_big_sec_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="27dp"
        android:layout_alignBottom="@+id/tv_big_sec_unit"
        android:layout_toLeftOf="@+id/tv_big_sec_1"
        android:layout_toStartOf="@+id/tv_big_sec_1"
        android:text="@string/zero"
        android:visibility="gone" />

    <TextView android:id="@+id/tv_big_sec_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#fff"
        android:textSize="28dp"
        android:layout_alignBottom="@+id/tv_big_sec_unit"
        android:layout_toLeftOf="@+id/tv_big_sec_2"
        android:layout_toStartOf="@+id/tv_big_sec_2"
        android:text="@string/zero"
        android:visibility="gone" />

    <TextView android:id="@+id/tv_small_yr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#9fff"
        android:textSize="13dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />

    <TextView android:id="@+id/tv_small_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#9fff"
        android:textSize="13dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/tv_small_yr"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />

    <TextView android:id="@+id/tv_small_day_of_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#9fff"
        android:textSize="13dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/tv_small_date"
        android:layout_marginBottom="22dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />

    <TextView android:id="@+id/tv_small_ampm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#9fff"
        android:textSize="13dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/tv_small_day_of_week"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />
    </RelativeLayout>
</FrameLayout>